@@ -18,3 +18,4 @@ oauth_provider/
 adl_lrs/
 logs/
 UMCloudDj/settings.py
+exelearning-ustadmobile-work/
